added stats and fixed the update user details page

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -85,7 +85,7 @@
     {% block content %}
     {% endblock %}
     </main>
-    <footer class="footer">
+    <footer class="footer mt-auto py-3 bg-light">
             <p>&copy; 2024 E-Commerce. All Rights Reserved.</p>
     </footer>
     </div>
