--- a/app/templates/update_user.html
+++ b/app/templates/update_user.html
@@ -41,11 +41,11 @@
                     </p>
                     
                     <p>
-                        <label for="address">Address<span>*</span></label>
-                        {{ form.address(class_="form-control", placeholder="Your Address") }}
-                        {% if form.address.errors %}
+                        <label for="address_line_1">Address Line 1<span>*</span></label>
+                        {{ form.address_line_1(class_="form-control", placeholder="Your Address") }}
+                        {% if form.address_line_1.errors %}
                         <ul>
-                            {% for error in form.address.errors %}
+                            {% for error in form.address_line_1.errors %}
                             <li class="error">{{ error }}</li>
                             {% endfor %}
                         </ul>
@@ -58,6 +58,42 @@
                         {% if form.pincode.errors %}
                         <ul>
                             {% for error in form.pincode.errors %}
+                            <li class="error">{{ error }}</li>
+                            {% endfor %}
+                        </ul>
+                        {% endif %}
+                    </p>
+                    
+                    <p>
+                        <label for="state">State<span>*</span></label>
+                        {{ form.state(class_="form-control") }}
+                        {% if form.state.errors %}
+                        <ul>
+                            {% for error in form.state.errors %}
+                            <li class="error">{{ error }}</li>
+                            {% endfor %}
+                        </ul>
+                        {% endif %}
+                    </p>
+
+                    <p>
+                        <label for="city">City<span>*</span></label>
+                        {{ form.city(class_="form-control") }}
+                        {% if form.city.errors %}
+                        <ul>
+                            {% for error in form.city.errors %}
+                            <li class="error">{{ error }}</li>
+                            {% endfor %}
+                        </ul>
+                        {% endif %}
+                    </p>
+
+                    <p>
+                        <label for="role">Role<span>*</span></label>
+                        {{ form.role(class_="form-select") }}
+                        {% if form.role.errors %}
+                        <ul>
+                            {% for error in form.role.errors %}
                             <li class="error">{{ error }}</li>
                             {% endfor %}
                         </ul>
@@ -84,4 +120,31 @@
         </div>
     </div>
 </div>
+
+<script>
+    const statesCity = {{ STATES_CITY|tojson }};
+    
+    const stateField = document.getElementById('state');
+    const cityField = document.getElementById('city');
+
+    stateField.addEventListener('change', function () {
+        const selectedState = stateField.value;
+        const cities = statesCity[selectedState] || [];
+        cityField.innerHTML = ""; // Clear previous options
+        cities.forEach(city => {
+            const option = document.createElement('option');
+            option.value = city;
+            option.textContent = city;
+            cityField.appendChild(option);
+        });
+    });
+
+    // Trigger city update on page load if a state is pre-selected
+    document.addEventListener('DOMContentLoaded', () => {
+        const event = new Event('change');
+        stateField.dispatchEvent(event);
+    });
+
+</script>
+
 {% endblock content %}
