--- a/app/templates/inventory_stocks_insights.html
+++ b/app/templates/inventory_stocks_insights.html
@@ -1,10 +1,12 @@
 {% extends 'base.html' %}
+
 {% block title %}
-    {{ context.graph_name }}
+    Inventory Management - Stocks Insights
 {% endblock title %}
+
 {% block heads %}
-<style>
-* {
+    <style>
+        * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -82,17 +84,24 @@ table th {
 }
     </style>
 {% endblock heads %}
+
 {% block content %}
 <div class="container-body">
+    <!-- Left Sidebar -->
+    <div class="sidebar">
+        <button id = "all-categories" onclick="fetchStockChart(this)">All Categories</button>
+        {% for row in context.data %}
+        <button id = "{{ row[0] }}" onclick="fetchStockChart(this)">{{ row[0] }}</button>
+        {% endfor %}
+    </div>
 
     <!-- Main Content -->
     <div class="content">
         <!-- Graph -->
-         <h1 class="m-4">Trend</h1>
         <div class="graph">
-            <img src="data:image/png;base64,{{ img }}" alt="Graph" class="graph-image">
+            <img src="data:image/png;base64,{{ img }}" alt="Graph" id="graph-image" class="graph-image">
         </div>
-        <h1 class="m-5">Data</h1>
+
         <!-- Responsive Table -->
         <div class="table-container mt-2">
             <table id="dataTable">
@@ -117,9 +126,68 @@ table th {
                 </tbody>
             </table>
         </div>
+
+        
     </div>
     <div class="mt-3">
         <a class="btn btn-primary" href = "/admin/stats">back</a>
     </div>
 </div>
+<script>
+function fetchStockChart(tag) {
+    if (tag.id == "all-categories"){
+        location.reload();
+        return;
+    }
+    else{
+        category = tag.id
+        console.log(category);
+    }    
+    fetch(`/admin/get-stock-chart/${category}`, {
+        method: "GET",
+        headers: {
+            "Content-Type": "application/json"
+        }
+    })
+    .then(response => {
+        if (!response.ok) {
+            throw new Error("Failed to fetch stock chart");
+        }
+        return response.json();
+    })
+    .then(data => {
+        // Update the image element
+        const imgElement = document.getElementById("graph-image");
+        if (imgElement) {
+            imgElement.src = `data:image/png;base64,${data.image}`;
+        } else {
+            console.error("Image element with ID 'stockChart' not found");
+        }
+        
+        const dataTable = document.getElementById("dataTable");
+        innerHTML = `<thead>
+                    <tr>
+                        <th>#</th>
+                        <th>Product Name</th>
+                        <th>Stock</th>
+                    </tr>
+                </thead><tbody>`
+        for (let i = 0 ; i<data.data[0].length; i++){
+            innerHTML += `<tr>
+                            <td>${i+1}</td>
+                            <td>${data.data[0][i]}</td>
+                            <td>${data.data[1][i]}</td>
+                        </tr>
+                `
+        }
+        innerHTML += "</tbody>"
+
+        dataTable.innerHTML = innerHTML;
+    })
+    .catch(error => {
+        console.error("Error fetching stock chart:", error);
+    });
+}
+</script>
+
 {% endblock content %}
