new graphs for user dist and states orders

--- a/app/templates/stats.html
+++ b/app/templates/stats.html
@@ -13,7 +13,7 @@
                 <div class="card shadow">
                     <div class="card-body">
                         <h5 class="card-title">New & Returning Customers</h5>
-                        <p class="card-text">This section provides a quick overview of your analytics data about the trends of new and returning customers.</p>
+                        <p class="card-text">A quick overview of your analytics data about the trends of new and returning customers.</p>
                         <a href="chart1" class="btn btn-success">View Chart 1</a>
                     </div>
                 </div>
@@ -45,12 +45,30 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-12">
+            <div class="col-md-6 mb-4">
                 <div class="card shadow">
                     <div class="card-body">
                         <h5 class="card-title">Finantial Overview</h5>
                         <p class="card-text">Compare your performance metrics across Revenue, Expenses and Profits.</p>
                         <a href="chart5" class="btn btn-success">View Chart 5</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6 mb-4">
+                <div class="card shadow">
+                    <div class="card-body">
+                        <h5 class="card-title">User Types Destribution</h5>
+                        <p class="card-text">Types of users across platform.</p>
+                        <a href="chart6" class="btn btn-success">View Chart 6</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-12">
+                <div class="card shadow">
+                    <div class="card-body">
+                        <h5 class="card-title">Order Location Relation</h5>
+                        <p class="card-text">Insights for the orders per state across India.</p>
+                        <a href="chart7" class="btn btn-success">View Chart 7</a>
                     </div>
                 </div>
             </div>
