--- a/app/templates/stats.html
+++ b/app/templates/stats.html
@@ -61,7 +61,7 @@
 
     /* Container Styles */
     .container-fluid {
-        padding: 2rem;
+        padding: 0.25rem;
     }
 
     /* Responsive Grid */
@@ -83,7 +83,7 @@
 {% endblock heads %}
 {% block content %}
 <div class="container-fluid">
-    <h2 class="text-center">Interactive Analytics Dashboard</h2>
+    <h2 class="text-center">Analytics Dashboard</h2>
 
     <!-- Page Content -->
     <div class="row">
